[gd_scene load_steps=3 format=3 uid="uid://ca5nxd4726ve2"]

[ext_resource type="Script" path="res://algebra/graphics/graphical_sum.gd" id="1_yt3t4"]
[ext_resource type="PackedScene" uid="uid://dy34w7fvnx6ba" path="res://algebra/graphics/glyph.tscn" id="2_i27b5"]

[node name="GraphicalSum" type="Node2D"]
script = ExtResource("1_yt3t4")

[node name="Sign" parent="." instance=ExtResource("2_i27b5")]
text = "+"

[node name="LeftParenthesis" parent="." instance=ExtResource("2_i27b5")]
text = "("

[node name="RightParenthesis" parent="." instance=ExtResource("2_i27b5")]
text = ")"
